# agents

./: .env.example  .gitignore  README.md  __main__.py  docker-compose.yml  example.json  llm_handler.py  perform_actions.py  pyproject.toml  requirements.txt  tests.ipynb
agents/: __main__.py  actions.py  config.py  constants.py  flask_app.py  instructions_handler.py  llm_handler.py  logger.py  response.py  task.py
agents/api/: agents_controller.py  epic_controller.py
agents/core/: actions.py  agent_handler.py  agents_switch.py  epic_performer.py  instruction_performer.py  instructions_handler.py  llm_handler.py  llm_reasoner.py  message.py  planner.py  story_performer.py  task_performer.py  user_agent.py
agents/core/actuator/: action_performer.py  actions_performer.py  artifact_generator.py  class_inspector.py  redis_comm.py
agents/core/developer_agent/: developer_agent_handler.py  developer_specialist_agent.py  schemas.py
agents/core/dto/: llm_reponse.py  llm_schema.py  message_dto.py
agents/core/model/: instruction.py  llm_reponse.py
agents/core/os_agent/: instructions_performer.py  operation_system_agent.py  os_agent_handler.py  os_instructions.py
agents/core/performer/: epic_performer.py  instruction_performer.py  story_performer.py  task_performer.py
agents/db/: data_model.py  epic.py  instruction.py  message.py  status.py  story.py  task.py
agents/utils/: class_inspector.py  files.py  jsons.py  redis_utils.py  strs.py  system_os.py  web.py
static/: response_structure.json
tests/agents/: test_actions.py  test_llm_handler.py
(+48 files in other folders)
